tests/ast_interpreter/err_var_redeclare.expected
<string>:3:9: error: symbol x already defined in this scope
    var x = 20;
        ^
