tests/ast_interpreter/err_var_redeclare.nx
fun main() {
    var x = 10;
    var x = 20;
}
